--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "angular-ui-router": "^0.4.2",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
-    "ngstorage": "^0.3.10"
+    "ngstorage": "^0.3.10",
+    "angular-notify": "^2.5.1"
   }
 }
